2006-06-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: yet even more funky fixes, pass Jerome's tests
	* src/GrampsDb/_GedTokens.py: yet even more funky fixes, handle more 
	non-standard tags
	
2006-06-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle more bizarre and illegal
	statements output by other programs.

2006-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Check.py (check_for_broken_family_links): Adapt to
	RelLib changes.

2006-06-07  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix child/parent relationships
	* src/GrampsDb/_GedTokens.py: handle some obscure tokens

2006-06-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: read gedcoms that we write
	* src/GrampsDb/_WriteGedcom.py: read gedcoms that we write
	* src/DisplayState.py: handle unset active person

2006-06-06  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py: missing import (Bug #0000180)

2006-06-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: More improvements, esp. with REPO
	* example/gedcom/sample.ged: add repo info

2006-06-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (start_eventref): Only set birth and
	death references for events with primary role.
	* src/GrampsDb/_DbUtils.py (set_birth_death_index): Only set birth
	and death references for events with primary role.

2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: more improvements

2006-06-05  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/BookReport.py (BookReportDialog.__init__): Correctly
	close managed window.

2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: improve parsing, comment the code better
	* example/gedcom/sample.ged: add new stuff
	* src/Mime/_PythonMime.py (_type_map): register .gpkg for non-linux
	platforms 
